# Mod-5-TMDB-Movie-Data-Analysis-using-Pyspark

./: .dockerignore  .env.example  .gitignore  Dockerfile  Final_Report.md  README.md  USER_GUIDE.md  colab_tmdb_analysis.ipynb  docker-compose.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  start-jupyter.sh
notebooks/: main.ipynb
src/: analysis.py  fetch_data.py  logger.py  process_data.py  visualize.py
