[project]
name = "mod-5-tmdb-movie-data-analysis-using-pyspark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.2.0",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
]
